Fix: Restore corrupted templates and fix missing base_dashboard.html reference
- Restored invoice_payment_dashboard.html (was duplicated/corrupted)
- Restored record_payment_form.html (was duplicated/corrupted)
- Fixed my_payroll.html: changed extends from non-existent base_dashboard.html to base_modern.html

--- a/core/templates/core/my_payroll.html
+++ b/core/templates/core/my_payroll.html
@@ -1,4 +1,4 @@
-{% extends "core/base_dashboard.html" %}
+{% extends "core/base_modern.html" %}
 {% load i18n humanize static %}
 
 {% block title %}{% trans "My Payroll" %} - Kibray{% endblock %}
