--- a/core/templates/core/dashboard_client_premium.html
+++ b/core/templates/core/dashboard_client_premium.html
@@ -302,7 +302,7 @@
                     <i class="bi bi-palette text-slate-400"></i>
                     {% trans "Colors" %}
                 </a>
-                <a href="{% url 'client_project_view' data.project.id %}#documents" 
+                <a href="{% url 'client_documents' data.project.id %}" 
                    class="inline-flex items-center gap-2 px-4 py-2 bg-white rounded-lg text-sm font-medium text-slate-700 subtle-border elegant-hover">
                     <i class="bi bi-folder text-slate-400"></i>
                     {% trans "Documents" %}
